// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider     = "prisma-client"
  output       = "../src/generated/prisma"
  moduleFormat = "cjs"
}

datasource db {
  provider = "postgresql"
}

model User {
  id            String           @id @default(uuid()) @db.Uuid
  name          String
  email         String           @unique
  cpf           String           @unique
  phone         String           @unique
  address       UserAddress?
  credentials   UserCredentials?
  refreshTokens RefreshToken[]
  movements     Movement[]
}

model UserAddress {
  user       User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId     String @id @db.Uuid
  address    String
  city       String
  state      String
  country    String
  postalCode String
}

model UserCredentials {
  user     User   @relation(fields: [email], references: [email], onDelete: Cascade)
  email    String @id
  password String
}

model RefreshToken {
  id        String    @id @db.Uuid
  user      User      @relation(fields: [userId], references: [id])
  userId    String    @db.Uuid
  issuedAt  DateTime  @db.Timestamptz(3)
  revokedAt DateTime? @db.Timestamptz(3)
  jti       String    @unique @db.Uuid
}

enum MovementType {
  DEPOSIT
  SWAP_IN
  SWAP_OUT
  SWAP_FEE
  WITHDRAW
}

enum CurrencyType {
  BRL
  BTC
  ETH
}

model Movement {
  id            String       @id @default(uuid()) @db.Uuid
  transactionId String       @db.Uuid
  user          User         @relation(fields: [accountOwner], references: [id])
  accountOwner  String       @db.Uuid
  type          MovementType
  currency      CurrencyType
  amount        Decimal      @db.Decimal(20, 8)
  createdAt     DateTime     @db.Timestamptz(3)
}
